# traffic_devils

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 2024_12_11_1650-b795e1098284_initial_tables.py
src/: app.py  database.py  settings.py  tg.py
src/entities/: base_exception.py  base_repository.py
src/entities/auth/: dependencies.py  exceptions.py  model.py  repository.py  router.py  schemas.py  service.py
src/entities/message/: dependencies.py  exceptions.py  model.py  repository.py  router.py  schemas.py  service.py
src/entities/role/: dependencies.py  exceptions.py  model.py  repository.py  router.py  schemas.py  service.py
src/entities/user/: dependencies.py  exceptions.py  model.py  repository.py  router.py  schemas.py  service.py
